--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.marianne.ejendomsselskabetbmapp.Forside" />
         </activity>
+        <activity
+            android:name=".SingleTask"
+            android:label="@string/title_activity_single_task" >
+        </activity>
     </application>
 
 </manifest>
